# tifffile

./: .gitattributes  .gitignore  ACKNOWLEDGEMENTS.rst  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py  setup_tiffile.py  tiffile.py
.github/workflows/: ci.yml  publish-python-package.yml
docs/: conf.py  make.py
docs/_static/: custom.css
examples/: earthbigdata.py  issue125.py  write_dng.py
tests/: conftest.py  test_tifffile.py
tifffile/: .tifffile.py.swp  __init__.py  __main__.py  _imagecodecs.py  geodb.py  lsm2bin.py  napari_tifffile.py  numcodecs.py  tiff2fsspec.py  tiffcomment.py  tifffile.py  tifffile_geodb.py  zarr.py
